tests/ui/const-generics/mgca/explicit_anon_consts-3.stderr
error: generic parameters may not be used in const operations
  --> $DIR/explicit_anon_consts-3.rs:9:43
   |
LL | type Alias<const N: usize> = [(); const { N }];
   |                                           ^

error: aborting due to 1 previous error

